fix(List): unify alignment of text in header through all the lists

--- a/app/less/modules/list.less
+++ b/app/less/modules/list.less
@@ -17,6 +17,7 @@
 
     .vg-list-header__type-icon svg {
         height: 15px;
+        width: 15px;
     }
 
     .vg-list-header__text {
